k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beebop-deploy-redis
  labels:
    app: beebop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beebop-redis
  template:
    metadata:
      labels:
        app: beebop-redis
    spec:
      containers:
        - name: beebop-redis
          image: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beebop-deploy-server
  labels:
    app: beebop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beebop-server
  template:
    metadata:
      labels:
        app: beebop-server
    spec:
      containers:
        - name: beebop-server
          image: mrcide/beebop-server:test-k8s
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beebop-deploy-py-api
  labels:
    app: beebop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beebop-py-api
  template:
    metadata:
      labels:
        app: beebop-py-api
    spec:
      containers:
        - name: beebop-py-api
          image: mrcide/beebop-py:main
          volumeMounts:
            - name: beebop-storage
              mountPath: /beebop/storage
      volumes:
        - name: beebop-storage
          persistentVolumeClaim:
            claimName: beebop-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beebop-deploy-py-worker
  labels:
    app: beebop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: beebop-py-worker
  template:
    metadata:
      labels:
        app: beebop-py-worker
    spec:
      containers:
        - name: beebop-py-worker
          image: mrcide/beebop-py:main
          command: ["rqworker"]
          volumeMounts:
            - name: beebop-storage
              mountPath: /beebop/storage
      volumes:
        - name: beebop-storage
          persistentVolumeClaim:
            claimName: beebop-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beebop-deploy-client
  labels:
    app: beebop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beebop-client
  template:
    metadata:
      labels:
        app: beebop-client
    spec:
      containers:
        - name: beebop-client
          image: mrcide/beebop-proxy:test-k8s
