k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beebop-redis-svc
spec:
  type: ClusterIP
  selector:
    app: beebop-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: beebop-server-svc
spec:
  type: ClusterIP
  selector:
    app: beebop-server
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: beebop-py-api-svc
spec:
  type: ClusterIP
  selector:
    app: beebop-py-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: beebop-py-worker-svc
spec:
  type: ClusterIP
  selector:
    app: beebop-py-worker
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: beebop-client-svc
spec:
  type: ClusterIP
  selector:
    app: beebop-client
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
