k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-beebop
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: beebop-server
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beebop-client
                port:
                  number: 3000
